--- a/static/style.css
+++ b/static/style.css
@@ -8,11 +8,13 @@ body {
   height: 150px;
   background-color: rgb(38 40 40);
   top: 0;
-  z-index: 2;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  position: fixed;
+  z-index: 1;
+  width: 100%;
 }
 
 #form {
@@ -77,7 +79,27 @@ body {
 
 #table {
   position: relative;
-  top: 30px;
-  z-index: 1;
+  border-collapse: collapse;
+  top: 180px;
+  width: 80%;
+  margin: auto;
 }
 
+#first-row {
+  position: sticky;
+  top: 148px;
+  background-color: rgb(29 29 29);
+  font-size: x-large;
+}
+
+th {
+  background-color: #313133;
+}
+
+td, th {
+  border: 2px solid rgb(99 100 101);
+}
+
+.result-number {
+  text-align: center;
+}
