--- a/static/style.css
+++ b/static/style.css
@@ -13,7 +13,7 @@ body {
   justify-content: center;
   align-items: center;
   position: fixed;
-  z-index: 1;
+  z-index: 2;
   width: 100%;
 }
 
@@ -117,4 +117,27 @@ tr:hover {
 
 .highlight {
   color: aqua;
+}
+
+.loader {
+  height: 100vh;
+  width: 90vw;
+  position: absolute;
+  top: 0;
+  left: 50%;
+  transform: translateX(-50%);
+  z-index: 1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: rgb(29 29 29);
+}
+
+.loading-gif {
+  height: 200px;
+  width: 200px;
+}
+
+.hidden {
+  display: none;
 }
